Quick fix for html overflow.
I don't always want the scroll bars to show up. Took up unnecessary space and users expect them to appear when the page needs to be scrolled.

--- a/Website/dev/css/theme.css
+++ b/Website/dev/css/theme.css
@@ -1,6 +1,3 @@
-html {
-	overflow: scroll;
-}
 body {
 	padding: 40px 0px 50px 0px;
 	margin: 0px;
